Refactoring GeometryTools2D